--- a/source/index.html
+++ b/source/index.html
@@ -35,11 +35,13 @@
           <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </nav>
       </div>
-      <div class="functional-food">
-        <h1 class="functional-food__title">Функциональное питание для котов</h1>
-        <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
-        <img class="functional-food__logo" src="img/logo/logo-product.png" alt="Логотип продукта" width="280" height="270">
-        <a href="form.html" class="button functional-food__link">Подобрать программу</a>
+      <div class="page-header__wrapper-food">
+        <div class="functional-food">
+          <h1 class="functional-food__title">Функциональное питание для котов</h1>
+          <p class="functional-food__slogan">Занялся собой? Займись котом!</p>
+          <img class="functional-food__logo" src="img/logo/logo-product.png" alt="Логотип продукта" width="280" height="270">
+          <a href="form.html" class="button functional-food__link">Подобрать программу</a>
+        </div>
       </div>
     </header>
 
@@ -80,41 +82,53 @@
       </section>
 
       <section class="example">
-        <h2 class="example__title heading-secondary">Живой пример</h2>
-        <p class="example__text">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <ul class="example__list">
-          <li class="example__item">
-            <p class="example__item-text">
-              5 кг
+        <div class="example__wrapper">
+          <h2 class="example__title heading-secondary">Живой пример</h2>
+          <div class="example__parameters-wrapper">
+            <p class="example__text">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
             </p>
-            <p class="example__desc">
-              снижение веса
-            </p>
-          </li>
-          <li class="example__item">
-            <p class="example__item-text">
-              60 дней
-            </p>
-            <p class="example__desc">
-              затрачено времени
-            </p>
-          </li>
-        </ul>
-        <p class="example__result">Затраты на питание: 15 000 РУБ.</p>
-        <label class="visually-hidden" for="selectingResult">Выбор результата</label>
-        <span class="example__restriction">было</span><input class="example__selecting-result" type="range" name="selectingResult"><span class="example__restriction">стало</span>
+            <ul class="example__list">
+              <li class="example__item">
+                <p class="example__item-text">
+                  5 кг
+                </p>
+                <p class="example__desc">
+                  снижение веса
+                </p>
+              </li>
+              <li class="example__item">
+                <p class="example__item-text">
+                  60 дней
+                </p>
+                <p class="example__desc">
+                  затрачено времени
+                </p>
+              </li>
+            </ul>
+            <div class="example__result"><span>Затраты на питание: </span> <span>15 000 РУБ.</span></div>
+          </div>
+          <div class="example__choice-wrapper">
+            <label class="visually-hidden" for="selectingResult">Выбор результата</label>
+            <span class="example__restriction">было</span>
+            <input class="example__selecting-result" type="range" name="selectingResult">
+            <span class="example__restriction">стало</span>
+          </div>
+        </div>
       </section>
 
       <section class="our-address">
         <h2 class="visually-hidden">Как нас найти</h2>
-        <div class="our-address__address">
-          <p class="our-address__invitation">приглашаем к сотрудничеству дилеров!</p>
-          <address class="our-address__contact">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
-        </div>
-        <div class="our-address__map">
-          <img class="our-address__image" src="img/different/location.png" width="320" height="362" alt="Как нас найти">
+        <div class="our-address__wrapper">
+          <div class="our-address__address-wrapper">
+            <div class="our-address__address">
+              <p class="our-address__invitation">приглашаем к сотрудничеству дилеров!</p>
+              <address class="our-address__contact">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+            </div>
+          </div>
+          <div class="our-address__map">
+            <img class="our-address__image" src="img/different/location.png" width="320" height="362" alt="Как нас найти">
+          </div>
         </div>
       </section>
     </main>
