--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,9 +6,8 @@
     <link href="css/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scalre=1">
 
-    <link rel="icon" href="img/icon/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/icon/32.svg" type="image/svg+xml">
-    <link rel="icon" href="img/icon/16.svg" type="image/svg+xml">
     <link rel="manifest" href="manifest.webmanifest">
 
   </head>
@@ -173,7 +172,7 @@
                 <a class="product__image-link" href="#">
                   <picture>
                     <source srcset="img/product/desktop/buckwheat-500.png 1x, img/product/desktop/buckwheat-500-2x.png 2x" media="(min-width: 768px)">
-                    <img class="product__image" src="img/product/mobile/buckwheat-500.jpg" srcset="img/product/mobile/buckwheat-500-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
+                    <img class="product__image" src="img/product/mobile/buckwheat-500.png" srcset="img/product/mobile/buckwheat-500-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
                 </a>
                 <div class="product__wrapper">
@@ -201,7 +200,7 @@
                 <a class="product__image-link" href="#">
                   <picture>
                     <source srcset="img/product/desktop/buckwheat-1000.png 1x, img/product/desktop/buckwheat-1000-2x.png 2x" media="(min-width: 768px)">
-                    <img class="product__image" src="img/product/mobile/buckwheat-1000.jpg" srcset="img/product/mobile/buckwheat-1000-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
+                    <img class="product__image" src="img/product/mobile/buckwheat-1000.png" srcset="img/product/mobile/buckwheat-1000-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
                 </a>
                 <div class="product__wrapper">
@@ -229,7 +228,7 @@
                 <a class="product__image-link" href="#">
                   <picture>
                     <source srcset="img/product/desktop/rice-500.png 1x, img/product/desktop/rice-500-2x.png 2x" media="(min-width: 768px)">
-                    <img class="product__image" src="img/product/mobile/rice-500.jpg" srcset="img/product/mobile/rice-500-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
+                    <img class="product__image" src="img/product/mobile/rice-500.png" srcset="img/product/mobile/rice-500-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
                 </a>
                 <div class="product__wrapper">
