--- a/source/form.html
+++ b/source/form.html
@@ -6,9 +6,8 @@
     <link href="css/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scalre=1">
 
-    <link rel="icon" href="img/icon/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/icon/32.svg" type="image/svg+xml">
-    <link rel="icon" href="img/icon/16.svg" type="image/svg+xml">
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body class="page__body">
