--- a/source/catalog.html
+++ b/source/catalog.html
@@ -59,6 +59,8 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
+                    <source type="image/webp" srcset="img/product/desktop/chicken-500.webp 1x, img/product/desktop/chicken-500-2x.webp 2x" media="(min-width: 768px)">
+                    <source type="image/webp" srcset="img/product/mobile/chicken-500.webp 1x, img/product/mobile/chicken-500-2x.webp 2x" media="(min-width: 320px)">
                     <source srcset="img/product/desktop/chicken-500.png 1x, img/product/desktop/chicken-500-2x.png 2x" media="(min-width: 768px)">
                     <img class="product__image" src="img/product/mobile/chicken-500.png" srcset="img/product/mobile/chicken-500-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
@@ -87,6 +89,8 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
+                    <source type="image/webp" srcset="img/product/desktop/chicken-1000.webp 1x, img/product/desktop/chicken-1000-2x.webp 2x" media="(min-width: 768px)">
+                    <source type="image/webp" srcset="img/product/mobile/chicken-1000.webp 1x, img/product/mobile/chicken-1000-2x.webp 2x" media="(min-width: 320px)">
                     <source srcset="img/product/desktop/chicken-1000.png 1x, img/product/desktop/chicken-1000-2x.png 2x" media="(min-width: 768px)">
                     <img class="product__image" src="img/product/mobile/chicken-1000.png" srcset="img/product/mobile/chicken-1000-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
@@ -115,6 +119,8 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
+                    <source type="image/webp" srcset="img/product/desktop/fish-500.webp 1x, img/product/desktop/fish-500-2x.webp 2x" media="(min-width: 768px)">
+                    <source type="image/webp" srcset="img/product/mobile/fish-500.webp 1x, img/product/mobile/fish-500-2x.webp 2x" media="(min-width: 320px)">
                     <source srcset="img/product/desktop/fish-500.png 1x, img/product/desktop/fish-500-2x.png 2x" media="(min-width: 768px)">
                     <img class="product__image" src="img/product/mobile/fish-500.png" srcset="img/product/mobile/fish-500-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
@@ -143,6 +149,8 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
+                    <source type="image/webp" srcset="img/product/desktop/fish-1000.webp 1x, img/product/desktop/fish-1000-2x.webp 2x" media="(min-width: 768px)">
+                    <source type="image/webp" srcset="img/product/mobile/fish-1000.webp 1x, img/product/mobile/fish-1000-2x.webp 2x" media="(min-width: 320px)">
                     <source srcset="img/product/desktop/fish-1000.png 1x, img/product/desktop/fish-1000-2x.png 2x" media="(min-width: 768px)">
                     <img class="product__image" src="img/product/mobile/fish-1000.png" srcset="img/product/mobile/fish-1000-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
@@ -171,6 +179,8 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
+                    <source type="image/webp" srcset="img/product/desktop/buckwheat-500.webp 1x, img/product/desktop/buckwheat-500-2x.webp 2x" media="(min-width: 768px)">
+                    <source type="image/webp" srcset="img/product/mobile/buckwheat-500.webp 1x, img/product/mobile/buckwheat-500-2x.webp 2x" media="(min-width: 320px)">
                     <source srcset="img/product/desktop/buckwheat-500.png 1x, img/product/desktop/buckwheat-500-2x.png 2x" media="(min-width: 768px)">
                     <img class="product__image" src="img/product/mobile/buckwheat-500.png" srcset="img/product/mobile/buckwheat-500-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
@@ -199,6 +209,8 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
+                    <source type="image/webp" srcset="img/product/desktop/buckwheat-1000.webp 1x, img/product/desktop/buckwheat-1000-2x.webp 2x" media="(min-width: 768px)">
+                    <source type="image/webp" srcset="img/product/mobile/buckwheat-1000.webp 1x, img/product/mobile/buckwheat-1000-2x.webp 2x" media="(min-width: 320px)">
                     <source srcset="img/product/desktop/buckwheat-1000.png 1x, img/product/desktop/buckwheat-1000-2x.png 2x" media="(min-width: 768px)">
                     <img class="product__image" src="img/product/mobile/buckwheat-1000.png" srcset="img/product/mobile/buckwheat-1000-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
@@ -227,6 +239,8 @@
               <div class="products__item product container">
                 <a class="product__image-link" href="#">
                   <picture>
+                    <source type="image/webp" srcset="img/product/desktop/rice-500.webp 1x, img/product/desktop/rice-500-2x.webp 2x" media="(min-width: 768px)">
+                    <source type="image/webp" srcset="img/product/mobile/rice-500.webp 1x, img/product/mobile/rice-500-2x.webp 2x" media="(min-width: 320px)">
                     <source srcset="img/product/desktop/rice-500.png 1x, img/product/desktop/rice-500-2x.png 2x" media="(min-width: 768px)">
                     <img class="product__image" src="img/product/mobile/rice-500.png" srcset="img/product/mobile/rice-500-2x.png 2x" width="140" height="112" alt="Куриная энергетическая еда 500г">
                   </picture>
@@ -340,7 +354,11 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper container">
         <div class="page-footer__logo">
-          <a class="page-footer__link" href="index.html"><img class="page-footer__logo-image" src="img/logo/logo-2.svg" width="128" height="27" alt="Логотип"></a>
+          <a class="page-footer__link" href="index.html">
+            <svg class="page-footer__logo-image" width="128" height="27" viewBox="0 0 101 18">
+              <use xlink:href="img/sprite.svg#footer-logo"></use>
+            </svg>
+          </a>
         </div>
         <div class="page-footer__social social">
           <ul class="social__list">
