--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
   <head>
+    <link rel="preload" href="/css/style.min.css" as="style">
+    <link rel="preload" href="/js/main-nav.js" as="script">
+    <link rel="preload" href="/img/background/header-cat-desktop2x.jpg" as="script">
+    <link rel="preload" href="/fonts/oswaldmedium.woff2" as="font">
+    <link rel="preload" href="/fonts/oswaldregular.woff2" as="font">
+
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.min.css" rel="stylesheet">
