--- a/source/index.html
+++ b/source/index.html
@@ -162,7 +162,7 @@
               <div class="example__selecting-result">
                 <span class="example__restriction">было</span>
                 <div class="example__scale">
-                  <input class="example__range" type="range" min="0" max="100">
+                  <input class="example__range" type="range" min="0" max="100" oninput="updateImageWidth(this.value);">
                 </div>
                 <span class="example__restriction">стало</span>
               </div>
@@ -246,5 +246,6 @@
       </div>
     </footer>
     <script src="js/main-nav.js"></script>
+    <script src="js/cat.js"></script>
   </body>
 </html>
